Ref #309: Code-reformat to indent routes in RouteBuilders